# Thesis

./: .env.example.azure  .env.example.openai  .gitignore  LICENSE-SECOND  README.md  batch_job.sh  env_example.sh  finetune.py  gpt4_batch.sh  gpt5_batch.sh  habrok_requirements.sh  issues.md  job.sh  no_gpu_batch.sh  no_gpu_job.sh  pyproject.toml  qwen_batch.sh  qwen_ft_batch.sh  requirements.txt  test_qwen.py  to_data.py  todo.md  tune.sh
dataset/: .env_example  AoC_scraper.py  README.md  pyproject.toml  requirements.txt  test.html  test.py
finetune_set/: augment.py  train_card.md
literature/: .bibtex  .topics.md
outputs/: batch_combiner.py
reports/: proposal.bib  proposal.tex
src/: evaluate-et-dataset.py  gen-eval-plus-sample.py  main.py
src/challenge_datasets/: APPSDataset.py  AoCDataset.py  Dataset.py  DatasetFactory.py  HumanEvalDataset.py  MBPPDataset.py  XCodeDataset.py  convert-apps-xcode.py  convert-cc-xcode.py
src/constants/: lang_mappings.py  paths.py
src/datasets/: APPSDataset.py  AoCDataset.py  CodeContestDataset.py  Dataset.py  DatasetFactory.py  HumanEvalDataset.py  MBPPDataset.py  XCodeDataset.py  __init__.py  convert-apps-xcode.py  convert-cc-xcode.py
src/evaluations/: __init__.py  api_comm.py  evaluate.py  evalute.py  exec_outcome.py  executor_utils.py  func_evaluate.py  limits_by_lang.yaml  local_executor.py  resource_limit.py
src/models/: Base.py  Gemini.py  ModelFactory.py  OpenAI.py  Qwen.py
src/promptings/: Analogical.py  Base.py  CoT.py  Direct.py  MapCoder.py  PACEcoding.py  PromptingFactory.py  SelfPlanning.py  __init__.py
(+1387 files in other folders)
